--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^18.0.0",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^18.1.0",
+    "react-dom": "18.0.0",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "17.0.26",
-    "@types/react": "18.0.6",
-    "@types/react-dom": "18.0.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
